--- a/views/articles/_form_fields.ejs
+++ b/views/articles/_form_fields.ejs
@@ -1,20 +1,16 @@
 <div class ="form-group mb-2">
     <label for = "title">Title</label>
-    <input required type ="text" name="title" id ="title" class ="form-control">
+    <input required value ="<%= article.title %>" type ="text" name="title" id ="title" class ="form-control">
 </div>
 
 <div class ="form-group mb-2">
     <label for = "Description">Description</label>
-    <textarea type ="text" name="description" id ="description" class ="form-control">
-
-    </textarea>
+    <textarea name="description" id ="description" class ="form-control"><%= article.description %></textarea>
 </div>
 
 <div class ="form-group mb-2">
     <label for = "markdown">Markdown</label>
-    <textarea type ="text" name="markdown" id ="markdown" class ="form-control">
-        
-    </textarea>
+    <textarea required name="markdown" id ="markdown" class ="form-control"><%= article.markdown %></textarea>
 </div>
 
 <a href="/" class ="btn btn-secondary">Cancel</a>
