--- a/views/articles/index.ejs
+++ b/views/articles/index.ejs
@@ -11,9 +11,10 @@
     <div class="container">
         <h1 class = "mb-4"> Blog Articles </h1>
         <a href="/articles/new" class = "btn btn-success">New article</a>
+
         <% articles.forEach(article => { %>
             <div class = "card mt-4">
-                <div class ="card-body"></div>
+                <div class ="card-body">
                     <h4 class="card-title"> <%= article.title %> </h4>
                     <div class= "card-subtitle texte-muted mb-2">
                         <%= article.createdAt.toLocaleDateString() %>
@@ -21,6 +22,8 @@
                     <div class ="card-text mb-2">
                         <%= article.description %>
                     </div>
+                    <a href = "/articles/<%=article.slug%>" class ="btn btn-primary">Read More</a>
+                </div>   
             </div>
         <% }) %>
     </div>
